@startuml

interface Interface

package PyAMS_layer {

    interface IBaseLayer
    Interface <|-- IBaseLayer

    interface IFormLayer
    Interface <|-- IFormLayer

    interface IPyAMSLayer
    IBaseLayer <|-- IPyAMSLayer
    IFormLayer <|-- IPyAMSLayer

    interface IPyAMSUserLayer
    IPyAMSLayer <|-- IPyAMSUserLayer

}

package PyAMS_zmi {

    interface IAdminLayer
    IPyAMSLayer <|-- IAdminLayer

}

package PyAMS_default_theme {

    interface IPyAMSDefaultLayer
    IPyAMSUserLayer <|-- IPyAMSDefaultLayer

}

@enduml